; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_hugetlb.c_set_huge_ptep_writable.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_hugetlb.c_set_huge_ptep_writable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_area_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vm_area_struct*, i64, i32*)* @set_huge_ptep_writable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_huge_ptep_writable(%struct.vm_area_struct* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.vm_area_struct*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.vm_area_struct* %0, %struct.vm_area_struct** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = call i32 @huge_ptep_get(i32* %8)
  %10 = call i32 @huge_pte_mkdirty(i32 %9)
  %11 = call i32 @huge_pte_mkwrite(i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.vm_area_struct*, %struct.vm_area_struct** %4, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i64 @huge_ptep_set_access_flags(%struct.vm_area_struct* %12, i64 %13, i32* %14, i32 %15, i32 1)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %3
  %19 = load %struct.vm_area_struct*, %struct.vm_area_struct** %4, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @update_mmu_cache(%struct.vm_area_struct* %19, i64 %20, i32* %21)
  br label %23

23:                                               ; preds = %18, %3
  ret void
}

declare dso_local i32 @huge_pte_mkwrite(i32) #1

declare dso_local i32 @huge_pte_mkdirty(i32) #1

declare dso_local i32 @huge_ptep_get(i32*) #1

declare dso_local i64 @huge_ptep_set_access_flags(%struct.vm_area_struct*, i64, i32*, i32, i32) #1

declare dso_local i32 @update_mmu_cache(%struct.vm_area_struct*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
